fix: increase legibility on project description and time frame text

--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ p a:hover {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   margin-left: 0.5em;
-  opacity: 0.45;
+  opacity: 0.6;
   vertical-align: middle;
 }
 
